src/objects/ISSUE__c.object
<CustomObject>
    <fields>
        <fullName>Closing_Comments__c</fullName>
        <label>Closing Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Issue_Type__c</fullName>
        <label>Issue Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Incident</fullName>
                </value>
                <value>
                    <fullName>Change Request</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Critical - Critical Business Impact - No Work Around</fullName>
                </value>
                <value>
                    <fullName>High - High Number of user impact - Work Around exists</fullName>
                </value>
                <value>
                    <fullName>Medium - Change is needed, does not impact major business process</fullName>
                </value>
                <value>
                    <fullName>Low - Minimum impact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Pending Clarification</fullName>
                </value>
                <value>
                    <fullName>Resolved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>ISSUE</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>NAME</columns>
        <columns>Issue_Type__c</columns>
        <columns>Priority__c</columns>
        <columns>Description__c</columns>
        <columns>Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Open</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Priority__c</columns>
        <columns>Status__c</columns>
        <columns>Issue_Type__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Resolved</value>
        </filters>
        <label>Open</label>
    </listViews>
    <nameField>
        <displayFormat>I-{0000000000}</displayFormat>
        <label>ISSUE</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ISSUES</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>